<resources>
    <string name="app_name">Camera</string>
    <string name="title_activity_video">Video</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_media_detail">Media</string>
    <string name="switch_camera">Переключить камеру</string>
    <string name="take_photo">Сделать фото</string>
    <string name="video_activity">Запись видео</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="start_recording">Начать запись видео</string>
    <string name="back_photo_screen">Переключить на камеру</string>
    <string name="back_to">Переключить на камеру</string>
    <string name="delete_media">Удалить медиа</string>
</resources>