<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/videoPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/switchCameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_camera"
            android:contentDescription="@string/switch_camera"/>

        <ImageButton
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:src="@drawable/ic_record"
            android:contentDescription="@string/start_recording"/>

        <ImageButton
            android:id="@+id/videoGalleryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gallery"
            android:contentDescription="@string/open_gallery" />

        <ImageButton
            android:id="@+id/backToPhotoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera"
            android:contentDescription="@string/back_photo_screen"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
</LinearLayout>
