<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/switchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/switch_camera"
                android:src="@drawable/ic_switch_camera"

                />

            <Space
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/videoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/video_activity"
                android:src="@drawable/ic_video" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imgCaptureBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/take_photo"
            android:src="@drawable/ic_capture_photo"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/galleryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/open_gallery"
                android:src="@drawable/ic_gallery"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:paddingRight="24dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
